Bug #20146
closedCode using Ractor with env `RUBY_MAX_CPU=1` ends with unreachable
Description
Updated by hsbt (Hiroshi SHIBATA) over 2 years ago
- Status changed from Open to Assigned
- Assignee set to ko1 (Koichi Sasada)
Updated by shia (Sangyong Sim) over 2 years ago
It seems any shared thread created when max cpu = 1 without enabled_mn_threads.
I suspect native_thread_check_and_create_shared, which always reject create shared thread.
Ref: https://github.com/ruby/ruby/blob/e4a9a73931072458f2bc13b29aeb33efb2eb9ae9/thread_pthread_mn.c#L382
As a result, scheduled Ractors won't be executed, and also won't be clean up as Ractor started.
I observed this bug fixed with this patch:
thread_pthread_mn.c | 3 ++-
1 file changed, 2 insertions(+), 1 deletion(-)
diff --git a/thread_pthread_mn.c b/thread_pthread_mn.c
index c8c7d9f173..572d5e49a1 100644
--- a/thread_pthread_mn.c
+++ b/thread_pthread_mn.c
@@ -379,7 +379,8 @@ native_thread_check_and_create_shared(rb_vm_t *vm)
rb_native_mutex_lock(&vm->ractor.sched.lock);
{
unsigned int snt_cnt = vm->ractor.sched.snt_cnt;
- if (!vm->ractor.main_ractor->threads.sched.enable_mn_threads) snt_cnt++; // do not need snt for main ractor
+ // create at least one shared thread with max_cpu 1 case.
+ if (!vm->ractor.main_ractor->threads.sched.enable_mn_threads && vm->ractor.sched.max_cpu > 1) snt_cnt++;
if (((int)snt_cnt < MINIMUM_SNT) ||
(snt_cnt < vm->ractor.cnt &&
--
2.25.1
(I don't think this patch is acceptable, e.g. using one more cpu for shared thread, so just explanation purpose)
Furthermore, I'm not sure expected behavior in this case.
For instance, I think here are some choices to create ractor with max cpu=1:
- always use dedicated thread as same as Thread class
- respect enable_mn_threads flag(but I think this flag might be for Thread class, not for Ractor)
- always use shared thread
- Let max_cpu=1 be exceptional case(like above patch)
- Let max cpu num = shared thread num to make things simpler
- prohibit max_cpu=1 mode ;)
Updated by jhawthorn (John Hawthorn) over 1 year ago
- Assignee changed from ko1 (Koichi Sasada) to ractor
Updated by jhawthorn (John Hawthorn) about 1 year ago
- Status changed from Assigned to Closed
Applied in changeset git|7ac16eff311f9bc762586bda9540d82e8eb7f135.
Adjust snt < max_cpu calculation
[Bug #20146]
Previously we dealt with the main Ractor not being enabled for M:N by
incrementing snt_cnt++. This worked for comparing against ractor count,
but meant that we always had one less SNT than was specified by
RUBY_MAX_CPU.
This was notably a problem for RUBY_MAX_CPU=1, which would cause Ractors
to hang.
This commit instead of adjusting snt, adjusts a
"schedulable_ractor_cnt". This way snt_cnt will actually reach
RUBY_MAX_CPU.